--- a/src/pages/Register/index.css
+++ b/src/pages/Register/index.css
@@ -1,5 +1,5 @@
 @media (min-width: 500px){
-    body{
+    .login{
         background-image: url(../../img/background.png);
         background-repeat: no-repeat;
         background-size: inherit;
@@ -9,7 +9,7 @@
 }
 
 @media only screen and (max-width: 499px){
-    body{
+    .login{
         background-image: url(../../img/background_cell.png);
         background-repeat: no-repeat;
         background-size: cover;
